Se configura el routerLink

--- a/3_2_0/AdminLTEconAngular/adminlte/src/app/shared/sidebar/sidebar.component.html
+++ b/3_2_0/AdminLTEconAngular/adminlte/src/app/shared/sidebar/sidebar.component.html
@@ -46,21 +46,15 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
+                            <a routerLink="usuarios" class="nav-link" style="cursor:pointer">
                                 <i class="fa fa-user ml-2"></i>
                                 <p class="ml-2">Usuarios</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
+                            <a routerLink="productos" class="nav-link" style="cursor:pointer">
                                 <i class="fas fa-chart-pie ml-2"></i>
                                 <p class="ml-2">Productos</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
-                                <i class="fa fa-user ml-2"></i>
-                                <p class="ml-2">Usuarios</p>
                             </a>
                         </li>
                     </ul>
