--- a/3_2_0/AdminLTEconAngular/adminlte/src/app/app.component.html
+++ b/3_2_0/AdminLTEconAngular/adminlte/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!-- Content Wrapper. Contains page content -->
 <app-sidebar></app-sidebar>
 <div class="content-wrapper">
+  <app-breadcrumbs></app-breadcrumbs>
   <router-outlet></router-outlet>
 </div>
 <!-- /.Content Wrapper. Contains page content -->
