--- a/3_2_0/AdminLTEconAngular/adminlte/src/app/pages/pages.component.html
+++ b/3_2_0/AdminLTEconAngular/adminlte/src/app/pages/pages.component.html
@@ -1,1 +1,9 @@
-<p>pages works!</p>
+<app-header></app-header>
+<!-- Content Wrapper. Contains page content -->
+<app-sidebar></app-sidebar>
+<div class="content-wrapper">
+  <app-breadcrumbs></app-breadcrumbs>
+  <router-outlet></router-outlet>
+</div>
+<!-- /.Content Wrapper. Contains page content -->
+<app-footer></app-footer>
